splitting question parts into 3-step process

--- a/src/app/components/check-content-types/check-content-types.component.html
+++ b/src/app/components/check-content-types/check-content-types.component.html
@@ -1,7 +1,7 @@
 <fieldset class="content-selection">
 	<legend>What kind of content are you checking?</legend>
 	
-	<p>Some guidelines only apply to some types of content.</p>
+	<p>Some guidelines only apply to some types of content. If you're not using any of these specific types, just continue without selecting a type.</p>
 	
 	<div class="content-selection-list">
 		
@@ -24,4 +24,6 @@
 			</label>
 		</span>
 	</div>
+	
+	<button type="button" (click)="next()">Next</button>
 </fieldset>
