--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,10 +1,10 @@
 @import "_colours";
 @import "_fonts";
 @import "_layout";
-@import "_layout";
 @import "_animations";
 @import "components/_forms";
 @import "components/_content-selection";
 @import "components/_compliance-level";
+@import "components/_steps";
 @import "components/_guideline";
 
