--- a/src/assets/scss/components/_content-selection.scss
+++ b/src/assets/scss/components/_content-selection.scss
@@ -1,6 +1,5 @@
 .content-selection {
 	margin: 1em 0;
-	max-width: $max-content-width;
 	
 	.content-selection-list {
 		display: flex;
@@ -14,6 +13,7 @@
 		flex: 0 0 100%;
 		list-style: none;
 		margin: .5em 0.25em 0 auto;
+		min-width: 11em;
 		
 		@media(min-width: 460px) {
 			flex: 0 0 47%;
@@ -25,6 +25,10 @@
 		
 		@media(min-width: 800px) {
 			flex: 1 0 20%;
+		}
+		
+		@media(min-width: 1000px) {
+			flex: 1 1 0px;
 		}
 	}
 	
