--- a/src/assets/scss/components/_steps.scss
+++ b/src/assets/scss/components/_steps.scss
@@ -1,6 +1,18 @@
 nav.steps {
 	position: relative;
+	transition: all 0.5s ease;
 	z-index: 1;
+	
+	&.step-3 {
+		ul {
+			margin: 1em auto;
+			width: 40%;
+		}
+		
+		li {
+			font-size: 60%;
+		}
+	}
 	
 	ul {
 		display: flex;
