--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -7,4 +7,4 @@
 @import "components/_compliance-level";
 @import "components/_steps";
 @import "components/_guideline";
-
+@import "components/_percent-complete";
