--- a/src/app/components/check/check.component.html
+++ b/src/app/components/check/check.component.html
@@ -15,6 +15,8 @@
 		<app-check-content-types (nextStep)="nextStep($event)" [attr.hidden]="!canShowStep(1) ? 'true' : null"></app-check-content-types>
 
 		<app-check-desired-compliance-level (nextStep)="nextStep($event)" [attr.hidden]="!canShowStep(2) ? 'true' : null"></app-check-desired-compliance-level>
+		
+		<app-toolbar *ngIf="currentStep == totalSteps" (saveState)="saveState($event)"></app-toolbar>
 	</div>
 	
 	<div class="results" *ngIf="canShowResults()">
