added notification on save

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,3 +8,4 @@
 @import "components/_steps";
 @import "components/_guideline";
 @import "components/_percent-complete";
+@import "components/_notifications";
