--- a/src/app/components/check/check.component.html
+++ b/src/app/components/check/check.component.html
@@ -17,6 +17,8 @@
 		<app-check-desired-compliance-level (nextStep)="nextStep($event)" [attr.hidden]="!canShowStep(2) ? 'true' : null"></app-check-desired-compliance-level>
 		
 		<app-toolbar *ngIf="currentStep == totalSteps" (saveState)="saveState($event)"></app-toolbar>
+		
+		<app-notification></app-notification>
 	</div>
 	
 	<div class="results" *ngIf="canShowResults()">
