--- a/src/assets/scss/_colours.scss
+++ b/src/assets/scss/_colours.scss
@@ -3,3 +3,8 @@ $white: #fff;
 $black: #000;
 $light-grey: #eee;
 $dark-grey: #666;
+
+$notification-success-background: #cfc;
+$notification-success-border: #080;
+$notification-error-background: #ffb5b5;
+$notification-error-border: #f00;
