loading saved state now correctly populates checked guidelines

--- a/src/app/components/check-content-types/check-content-types.component.html
+++ b/src/app/components/check-content-types/check-content-types.component.html
@@ -14,6 +14,7 @@
 				class="accessible-hidden"
 				(change)="toggleSelectedType($event, contentType)"
 				aria-controls="guidelines"
+				[checked]="isContentTypeChecked(contentType)"
 			/>
 			
 			<label for="select-{{ contentType }}">
