--- a/src/assets/scss/_colours.scss
+++ b/src/assets/scss/_colours.scss
@@ -8,3 +8,5 @@ $notification-success-background: #cfc;
 $notification-success-border: #080;
 $notification-error-background: #ffb5b5;
 $notification-error-border: #f00;
+$notification-warn-background: #ffb;
+$notification-warn-border: #000;
