--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,3 +1,4 @@
 <div class="toolbar" role="toolbar">
 	<button type="button" (click)="save()">Save</button>
+	<button type="button" (click)="load()">Load</button>
 </div>
