compliance level correctly set from loaded state

--- a/src/app/components/check-desired-compliance-level/check-desired-compliance-level.component.html
+++ b/src/app/components/check-desired-compliance-level/check-desired-compliance-level.component.html
@@ -9,7 +9,7 @@
 				 type="radio" 
 				 name="compliance-level" 
 				 value="{{ level }}" id="compliance-level-{{ level }}"
-				 [checked]="level === defaultLevel"
+				 [checked]="isComplianceLevelChecked(level)"
 				 class="accessible-hidden"
 				 (change)="toggleSelectedComplianceLevel($event, level)"
 				 aria-controls="guidelines"
