save state can be restored, added tests for new methods

--- a/src/app/components/check/check.component.html
+++ b/src/app/components/check/check.component.html
@@ -22,6 +22,6 @@
 	</div>
 	
 	<div class="results">
-		<app-guidelines [selectedContentTypes]="getSelectedContentTypes()" [guidelineLevel]="getSelectedGuidelineLevel()"></app-guidelines>
+		<app-guidelines [selectedContentTypes]="getSelectedContentTypes()" [guidelineLevel]="getSelectedGuidelineLevel()" [showGuidelines]="canShowResults()"></app-guidelines>
 	</div>
 </form>
