tidying up appearance of toolbar

--- a/src/app/components/check/check.component.html
+++ b/src/app/components/check/check.component.html
@@ -11,12 +11,14 @@
 				</ng-container>
 			</ul>
 		</nav>
+
+		<app-toolbar *ngIf="currentStep < totalSteps" (saveState)="saveState($event)" (loadState)="loadState($event)"></app-toolbar>
 		
 		<app-check-content-types (nextStep)="nextStep($event)" [attr.hidden]="!canShowStep(1) ? 'true' : null"></app-check-content-types>
 
 		<app-check-desired-compliance-level (nextStep)="nextStep($event)" [attr.hidden]="!canShowStep(2) ? 'true' : null"></app-check-desired-compliance-level>
 		
-		<app-toolbar (saveState)="saveState($event)" (loadState)="loadState($event)"></app-toolbar>
+		<app-toolbar *ngIf="currentStep == totalSteps" (saveState)="saveState($event)" (loadState)="loadState($event)"></app-toolbar>
 		
 		<app-notification></app-notification>
 	</div>
