--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,25 @@
 <div class="toolbar" role="toolbar">
-	<button type="button" (click)="save()">Save</button>
-	<button type="button" (click)="load()">Load</button>
+	<button type="button" (click)="save()" aria-labelledby="toolbar-save-label">
+		<span class="accessible-hidden" title="Save" id="toolbar-save-label" aria-hidden="true">Save</span>
+		<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" role="img" aria-hidden="true">
+			<g transform="translate(0,-217.62498)">
+				<path d="m 23.376623,261.87359 v 215.95547 c -1.129572,7.18684 0.570194,13.37509 11.966605,16.141 H 254.63822 c 8.14189,-1.05034 14.0032,-5.29347 14.74954,-16.69758 V 296.93852 L 216.65121,244.20197 H 38.682746 c -10.464703,2.7293 -14.424648,7.33344 -15.306123,17.67162 z"/>
+				<path d="m 75.695733,244.89771 v 73.74768 c -0.03467,5.88663 -0.490905,11.91379 10.296846,14.19295 H 200.37106 c 8.16708,-1.90866 10.01432,-7.60922 10.85343,-13.91466 v -74.58256"/>
+				<rect width="11.966605" height="11.966605" x="42.857143" y="462.24466" ry="0" />
+				<rect width="11.966605" height="11.966605" x="236.13173" y="462.38379" ry="0" />
+				<rect width="23.283688" height="40.259567" x="163.40454" y="268.32083" ry="0" />
+				<path d="M 75.695733,493.97006 V 393.22795 c 0.55725,-7.11396 3.755957,-12.80559 13.914657,-14.74954 h 116.32653 c 8.36097,0.27274 10.70007,7.28168 10.78716,18.68391 v 97.08604"/>
+			</g>
+		</svg>
+	</button>
+	<button type="button" (click)="load()" aria-labelledby="toolbar-load-label">
+		<span class="accessible-hidden" title="Load" id="toolbar-load-label" aria-hidden="true">Load</span>
+		<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" role="img" aria-hidden="true">
+			<g transform="translate(0,-217.62498)">
+				<path d="M 31.725417,491.74372 82.961661,351.48188 c 4.729694,-11.20881 6.548368,-10.43359 18.058749,-10.42622 h 179.52307 c 8.49632,0.62219 12.93831,4.7323 9.71626,16.82906 l -45.20042,122.45017 c -4.32039,8.32686 -9.13704,9.90522 -18.807,10.85822 H 19.266446 C 9.6687656,488.78915 10.053215,485.23634 9.4619666,474.21125 V 304.45244 c 0.032233,-9.1317 2.7366704,-13.6427 13.9146564,-13.35807 h 60.389611 c 10.719296,0.41621 11.513227,1.766 16.580926,4.44285 l 36.19979,20.89996 h 94.23204 c 8.92591,-0.34626 12.04057,1.88761 14.19015,9.67741 l -0.4338,14.52199"/>
+				<path d="m 122.44898,341.18713 v -60.6679 c 0.10834,-4.91802 2.62999,-7.65443 7.65306,-7.65306 l 66.36207,0 c 5.51949,-0.0823 7.97843,3.19238 8.19739,7.86178 l 0.0839,17.60204"/>
+				<path d="m 195.65191,289.2365 9.09349,9.09349 9.10309,-9.10309"/>
+			</g>
+		</svg>
+	</button>
 </div>
