--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,3 +9,4 @@
 @import "components/_guideline";
 @import "components/_percent-complete";
 @import "components/_notifications";
+@import "components/_toolbar";
