loading saved state now prompts before clobbering current state

--- a/src/app/components/check/check.component.html
+++ b/src/app/components/check/check.component.html
@@ -27,3 +27,5 @@
 		<app-guidelines [selectedContentTypes]="getSelectedContentTypes()" [guidelineLevel]="getSelectedGuidelineLevel()" [showGuidelines]="canShowResults()"></app-guidelines>
 	</div>
 </form>
+
+<app-confirm (confirmation)="confirmModalAction($event)"></app-confirm>
