--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -12,7 +12,7 @@
 			</g>
 		</svg>
 	</button>
-	<button type="button" (click)="load()" aria-labelledby="toolbar-load-label">
+	<button type="button" (click)="load($event)" aria-labelledby="toolbar-load-label">
 		<span class="accessible-hidden" title="Load" id="toolbar-load-label" aria-hidden="true">Load</span>
 		<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" role="img" aria-hidden="true">
 			<g transform="translate(0,-217.62498)">
