--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,3 +10,4 @@
 @import "components/_percent-complete";
 @import "components/_notifications";
 @import "components/_toolbar";
+@import "components/_modals";
