--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <div class="toolbar" role="toolbar">
-	<button type="button" (click)="save()" aria-labelledby="toolbar-save-label">
+	<button type="button" (click)="save($event)" aria-labelledby="toolbar-save-label">
 		<span class="accessible-hidden" title="Save" id="toolbar-save-label" aria-hidden="true">Save</span>
 		<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" role="img" aria-hidden="true">
 			<g transform="translate(0,-217.62498)">
