--- a/src/assets/scss/_colours.scss
+++ b/src/assets/scss/_colours.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $black: #000;
 $light-grey: #eee;
 $dark-grey: #666;
+$medium-grey: #aaa;
 
 $notification-success-background: #cfc;
 $notification-success-border: #080;
